# emogen

include/: BoostEmoDetector.h  FaceDetector.h  SVMEmoDetector.h
src/: CMakeLists.txt
src/dataset/: datasetTrain.py  datasetVerifyPrediction.py  example_dataset.cfg  gui.py  train_models.py
src/detector/: ANNEmoDetector.cpp  ANNEmoDetector.h  BoostEmoDetector.cpp  BoostEmoDetector.h  CMakeLists.txt  EmoDetector.cpp  FacePreProcessor.cpp  SVMEmoDetector.cpp  emo_detector_cli.cpp
src/facedetector/: FaceDetector.cpp  facecrop_cli.cpp
src/gaborbank/: GaborBank.cpp  gaborbank_cli.cpp
src/gui/: ACapture.h  AGui.h  CMakeLists.txt  DebugGui.cpp  DebugGui.h  EmotimeGui.cpp  EmotimeGui.h  GaborGui.hpp  ImageCapture.cpp  ImageCapture.h  VideoCapture.cpp  emogengui_cli.cpp  emogenvideo_cli.cpp  emogenvideodebug_cli.cpp  emotimevideo_cli.cpp  emotimevideodebug_cli.cpp  gaborgui_cli.cpp
src/training/: ANNClassifier.cpp  ANNClassifier.h  AdaBoostClassifier.cpp  AdaBoostClassifier.h  CMakeLists.txt  TrainingParameters.h  train_cli.cpp
